--- a/Changes
+++ b/Changes
@@ -1,14 +1,16 @@
-1.049  2019-05-xx
+1.049  2019-05-31
 
 - Fix RT#129312: Code signing for OSX
   
   Avoid Archive::Zip::Archive error "can't find EOCD signature" for pp'ed
   executables with lots of stuff appended (e.g. by OSX codesign).
   
-  Note: This requires the corresponding fix in PAR, 
-  hence bump its required version to 1.016.
+  Note: This requires the corresponding fix in PAR in 1.016, 
+  hence bump its required version.
     
-- Fix issue GitHub#15 (dosen't build with a relocatable version of perl)
+  Add a test by appending 512 kB to a pp'ed executable.
+
+- Fix issue GitHub#15 (doesn't build with a relocatable version of perl)
   
   If the perl used to build PAR::Packer is a relocatable perl,
   i.e. it was build with -Duserelocatableinc, then myldr/par will
