--- a/Changes
+++ b/Changes
@@ -1,3 +1,14 @@
+1.059  2023-07-20
+
+- correctly propagate the exit value of a packed executable
+  
+  Get the exit value from perl_destruct() instead of perl_run().
+  These may be different, e.g. if the value of $? is set in an END block.
+
+- clean up tests a bit
+- set up GitHub CI and add cpanfile (for CI only)
+- check more return codes in myldr/*.c
+
 1.058  2023-06-12
 
 - patch DynaLoader.pm to make intercepting DynaLoader::bootstrap work again
